--- a/config.yaml
+++ b/config.yaml
@@ -31,7 +31,7 @@ params:
 
     sidebar:
         emoji: 🍥
-        subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        subtitle: share every day
         avatar:
             local: true
             src: img/paimen.jpg
