--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ theme: "hugo-theme-stack"
 paginate: 5
 
 # Change it to your Disqus shortname before using
-disqusShortname: hugo-theme-stack
+disqusShortname: wutaoblog
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn
