--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ params:
             src: img/paimen.jpg
 
     article:
-        math: false
+        math: true
         license:
             enabled: true
             default: Licensed under CC BY-NC-SA 4.0
