--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseurl: https://wutaoblog.com.cn
 languageCode: en-us
 theme: "hugo-theme-stack"
 paginate: 5
+title : wutao'blog
 
 # Change it to your Disqus shortname before using
 disqusShortname: wutaoblog
